// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormCard Component Should call function with updated array as parameter when button is clicked 1`] = `
<div>
  <div
    class="row"
  >
    <div
      class="py-4 px-3 card shadow-sm col-12 align-items-stretch"
    >
      <div
        class="p-0 card-body text-center align-self-start"
      />
      <div
        class="text-start"
      >
        <div
          class="d-flex flex-column mb-4"
        >
          <span
            class="optionInfo__span"
            data-testid="spanfireStarter0"
          >
            Firestarter
          </span>
          <div
            style="background-color: white;"
          >
            <div
              class="nav nav-tabs"
            >
              <div
                class="nav-item"
              >
                <a
                  class="nav-link active"
                  data-rr-ui-event-key="Write"
                  href="#"
                  role="button"
                  style="color: rgb(41, 41, 41);"
                  tabindex="0"
                >
                  Write
                </a>
              </div>
              <div
                class="nav-item"
              >
                <a
                  class="nav-link"
                  data-rr-ui-event-key="Preview"
                  href="#"
                  role="button"
                  style="color: rgb(142, 142, 142);"
                  tabindex="0"
                >
                  Preview
                </a>
              </div>
              <div
                class="ms-auto btn-toolbar"
                role="toolbar"
              >
                <button
                  aria-label="Add header text"
                  class="btn"
                >
                  <svg
                    aria-hidden="true"
                    class="octicon octicon-heading"
                    fill="currentColor"
                    focusable="false"
                    height="16"
                    role="img"
                    style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      d="M3.75 2a.75.75 0 01.75.75V7h7V2.75a.75.75 0 011.5 0v10.5a.75.75 0 01-1.5 0V8.5h-7v4.75a.75.75 0 01-1.5 0V2.75A.75.75 0 013.75 2z"
                    />
                  </svg>
                </button>
                <button
                  aria-label="Add bold text <ctrl+b>"
                  class="btn"
                >
                  <svg
                    aria-hidden="true"
                    class="octicon octicon-bold"
                    fill="currentColor"
                    focusable="false"
                    height="16"
                    role="img"
                    style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      d="M4 2h4.5a3.501 3.501 0 012.852 5.53A3.499 3.499 0 019.5 14H4a1 1 0 01-1-1V3a1 1 0 011-1zm1 7v3h4.5a1.5 1.5 0 000-3zm3.5-2a1.5 1.5 0 000-3H5v3z"
                    />
                  </svg>
                </button>
                <button
                  aria-label="Add italic text <ctrl+i>"
                  class="btn"
                >
                  <svg
                    aria-hidden="true"
                    class="octicon octicon-italic"
                    fill="currentColor"
                    focusable="false"
                    height="16"
                    role="img"
                    style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      d="M6 2.75A.75.75 0 016.75 2h6.5a.75.75 0 010 1.5h-2.505l-3.858 9H9.25a.75.75 0 010 1.5h-6.5a.75.75 0 010-1.5h2.505l3.858-9H6.75A.75.75 0 016 2.75z"
                    />
                  </svg>
                </button>
                <button
                  aria-label="Insert a quote <ctrl+shift+.>"
                  class="btn"
                >
                  <svg
                    aria-hidden="true"
                    class="octicon octicon-quote"
                    fill="currentColor"
                    focusable="false"
                    height="16"
                    role="img"
                    style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      d="M1.75 2.5h10.5a.75.75 0 010 1.5H1.75a.75.75 0 010-1.5zm4 5h8.5a.75.75 0 010 1.5h-8.5a.75.75 0 010-1.5zm0 5h8.5a.75.75 0 010 1.5h-8.5a.75.75 0 010-1.5zM2.5 7.75v6a.75.75 0 01-1.5 0v-6a.75.75 0 011.5 0z"
                    />
                  </svg>
                </button>
                <button
                  aria-label="Insert code <ctrl+e>"
                  class="btn"
                >
                  <svg
                    aria-hidden="true"
                    class="octicon octicon-code"
                    fill="currentColor"
                    focusable="false"
                    height="16"
                    role="img"
                    style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      d="M11.28 3.22l4.25 4.25a.75.75 0 010 1.06l-4.25 4.25a.749.749 0 01-1.275-.326.749.749 0 01.215-.734L13.94 8l-3.72-3.72a.749.749 0 01.326-1.275.749.749 0 01.734.215zm-6.56 0a.751.751 0 011.042.018.751.751 0 01.018 1.042L2.06 8l3.72 3.72a.749.749 0 01-.326 1.275.749.749 0 01-.734-.215L.47 8.53a.75.75 0 010-1.06z"
                    />
                  </svg>
                </button>
                <button
                  aria-label="Add a link <ctrl+k>"
                  class="btn"
                >
                  <svg
                    aria-hidden="true"
                    class="octicon octicon-link"
                    fill="currentColor"
                    focusable="false"
                    height="16"
                    role="img"
                    style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      d="M7.775 3.275l1.25-1.25a3.5 3.5 0 114.95 4.95l-2.5 2.5a3.5 3.5 0 01-4.95 0 .751.751 0 01.018-1.042.751.751 0 011.042-.018 1.998 1.998 0 002.83 0l2.5-2.5a2.002 2.002 0 00-2.83-2.83l-1.25 1.25a.751.751 0 01-1.042-.018.751.751 0 01-.018-1.042zm-4.69 9.64a1.998 1.998 0 002.83 0l1.25-1.25a.751.751 0 011.042.018.751.751 0 01.018 1.042l-1.25 1.25a3.5 3.5 0 11-4.95-4.95l2.5-2.5a3.5 3.5 0 014.95 0 .751.751 0 01-.018 1.042.751.751 0 01-1.042.018 1.998 1.998 0 00-2.83 0l-2.5 2.5a1.998 1.998 0 000 2.83z"
                    />
                  </svg>
                </button>
                <button
                  aria-label="Add a bulleted list <ctrl+shift+8>"
                  class="btn"
                >
                  <svg
                    aria-hidden="true"
                    class="octicon octicon-list-unordered"
                    fill="currentColor"
                    focusable="false"
                    height="16"
                    role="img"
                    style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      d="M5.75 2.5h8.5a.75.75 0 010 1.5h-8.5a.75.75 0 010-1.5zm0 5h8.5a.75.75 0 010 1.5h-8.5a.75.75 0 010-1.5zm0 5h8.5a.75.75 0 010 1.5h-8.5a.75.75 0 010-1.5zM2 14a1 1 0 110-2 1 1 0 010 2zm1-6a1 1 0 11-2 0 1 1 0 012 0zM2 4a1 1 0 110-2 1 1 0 010 2z"
                    />
                  </svg>
                </button>
                <button
                  aria-label="Add a numbered list <ctrl+shift+7>"
                  class="btn"
                >
                  <svg
                    aria-hidden="true"
                    class="octicon octicon-list-ordered"
                    fill="currentColor"
                    focusable="false"
                    height="16"
                    role="img"
                    style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      d="M5 3.25a.75.75 0 01.75-.75h8.5a.75.75 0 010 1.5h-8.5A.75.75 0 015 3.25zm0 5a.75.75 0 01.75-.75h8.5a.75.75 0 010 1.5h-8.5A.75.75 0 015 8.25zm0 5a.75.75 0 01.75-.75h8.5a.75.75 0 010 1.5h-8.5a.75.75 0 01-.75-.75zM.924 10.32a.5.5 0 01-.851-.525l.001-.001.001-.002.002-.004.007-.011c.097-.144.215-.273.348-.384.228-.19.588-.392 1.068-.392.468 0 .858.181 1.126.484.259.294.377.673.377 1.038 0 .987-.686 1.495-1.156 1.845l-.047.035c-.303.225-.522.4-.654.597h1.357a.5.5 0 010 1H.5a.5.5 0 01-.5-.5c0-1.005.692-1.52 1.167-1.875l.035-.025c.531-.396.8-.625.8-1.078a.57.57 0 00-.128-.376C1.806 10.068 1.695 10 1.5 10a.658.658 0 00-.429.163.835.835 0 00-.144.153zM2.003 2.5V6h.503a.5.5 0 010 1H.5a.5.5 0 010-1h.503V3.308l-.28.14a.5.5 0 01-.446-.895l1.003-.5a.5.5 0 01.723.447z"
                    />
                  </svg>
                </button>
              </div>
            </div>
            <textarea
              class="textarea"
              data-testid="textbox"
              placeholder="Type something..."
              style="height: 2px;"
            />
          </div>
        </div>
      </div>
      <div
        class="text-center align-self-start"
      >
        <button
          class="btn borderless btn-primary"
          style="color: rgb(255, 255, 255);"
        >
          Create New Challenge
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`FormCard Component Should output empty title when title is empty 1`] = `
<div>
  <div
    class="row"
  >
    <div
      class="py-4 px-3 card shadow-sm col-12 align-items-stretch"
    >
      <div
        class="p-0 card-body text-center align-self-start"
      />
      <div
        class="text-start"
      >
        <div
          class="d-flex flex-column mb-4"
        >
          <span
            class="optionInfo__span"
            data-testid="span0"
          />
          <input
            class="form-control optionInfo__input"
            data-testid="input0"
            placeholder=""
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="text-center align-self-start"
      >
        <button
          class="btn borderless btn-primary"
          style="color: rgb(255, 255, 255);"
        >
          Create New Challenge
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`FormCard Component Should render MdInput component when type is MD_INPUT 1`] = `
<div>
  <div
    class="row"
  >
    <div
      class="py-4 px-3 card shadow-sm col-12 align-items-stretch"
    >
      <div
        class="p-0 card-body text-center align-self-start"
      />
      <div
        class="text-start"
      >
        <div
          class="d-flex flex-column mb-4"
        >
          <span
            class="optionInfo__span"
            data-testid="spanfireStarter0"
          >
            Firestarter
          </span>
          <div
            style="background-color: white;"
          >
            <div
              class="nav nav-tabs"
            >
              <div
                class="nav-item"
              >
                <a
                  class="nav-link active"
                  data-rr-ui-event-key="Write"
                  href="#"
                  role="button"
                  style="color: rgb(41, 41, 41);"
                  tabindex="0"
                >
                  Write
                </a>
              </div>
              <div
                class="nav-item"
              >
                <a
                  class="nav-link"
                  data-rr-ui-event-key="Preview"
                  href="#"
                  role="button"
                  style="color: rgb(142, 142, 142);"
                  tabindex="0"
                >
                  Preview
                </a>
              </div>
              <div
                class="ms-auto btn-toolbar"
                role="toolbar"
              >
                <button
                  aria-label="Add header text"
                  class="btn"
                >
                  <svg
                    aria-hidden="true"
                    class="octicon octicon-heading"
                    fill="currentColor"
                    focusable="false"
                    height="16"
                    role="img"
                    style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      d="M3.75 2a.75.75 0 01.75.75V7h7V2.75a.75.75 0 011.5 0v10.5a.75.75 0 01-1.5 0V8.5h-7v4.75a.75.75 0 01-1.5 0V2.75A.75.75 0 013.75 2z"
                    />
                  </svg>
                </button>
                <button
                  aria-label="Add bold text <ctrl+b>"
                  class="btn"
                >
                  <svg
                    aria-hidden="true"
                    class="octicon octicon-bold"
                    fill="currentColor"
                    focusable="false"
                    height="16"
                    role="img"
                    style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      d="M4 2h4.5a3.501 3.501 0 012.852 5.53A3.499 3.499 0 019.5 14H4a1 1 0 01-1-1V3a1 1 0 011-1zm1 7v3h4.5a1.5 1.5 0 000-3zm3.5-2a1.5 1.5 0 000-3H5v3z"
                    />
                  </svg>
                </button>
                <button
                  aria-label="Add italic text <ctrl+i>"
                  class="btn"
                >
                  <svg
                    aria-hidden="true"
                    class="octicon octicon-italic"
                    fill="currentColor"
                    focusable="false"
                    height="16"
                    role="img"
                    style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      d="M6 2.75A.75.75 0 016.75 2h6.5a.75.75 0 010 1.5h-2.505l-3.858 9H9.25a.75.75 0 010 1.5h-6.5a.75.75 0 010-1.5h2.505l3.858-9H6.75A.75.75 0 016 2.75z"
                    />
                  </svg>
                </button>
                <button
                  aria-label="Insert a quote <ctrl+shift+.>"
                  class="btn"
                >
                  <svg
                    aria-hidden="true"
                    class="octicon octicon-quote"
                    fill="currentColor"
                    focusable="false"
                    height="16"
                    role="img"
                    style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      d="M1.75 2.5h10.5a.75.75 0 010 1.5H1.75a.75.75 0 010-1.5zm4 5h8.5a.75.75 0 010 1.5h-8.5a.75.75 0 010-1.5zm0 5h8.5a.75.75 0 010 1.5h-8.5a.75.75 0 010-1.5zM2.5 7.75v6a.75.75 0 01-1.5 0v-6a.75.75 0 011.5 0z"
                    />
                  </svg>
                </button>
                <button
                  aria-label="Insert code <ctrl+e>"
                  class="btn"
                >
                  <svg
                    aria-hidden="true"
                    class="octicon octicon-code"
                    fill="currentColor"
                    focusable="false"
                    height="16"
                    role="img"
                    style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      d="M11.28 3.22l4.25 4.25a.75.75 0 010 1.06l-4.25 4.25a.749.749 0 01-1.275-.326.749.749 0 01.215-.734L13.94 8l-3.72-3.72a.749.749 0 01.326-1.275.749.749 0 01.734.215zm-6.56 0a.751.751 0 011.042.018.751.751 0 01.018 1.042L2.06 8l3.72 3.72a.749.749 0 01-.326 1.275.749.749 0 01-.734-.215L.47 8.53a.75.75 0 010-1.06z"
                    />
                  </svg>
                </button>
                <button
                  aria-label="Add a link <ctrl+k>"
                  class="btn"
                >
                  <svg
                    aria-hidden="true"
                    class="octicon octicon-link"
                    fill="currentColor"
                    focusable="false"
                    height="16"
                    role="img"
                    style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      d="M7.775 3.275l1.25-1.25a3.5 3.5 0 114.95 4.95l-2.5 2.5a3.5 3.5 0 01-4.95 0 .751.751 0 01.018-1.042.751.751 0 011.042-.018 1.998 1.998 0 002.83 0l2.5-2.5a2.002 2.002 0 00-2.83-2.83l-1.25 1.25a.751.751 0 01-1.042-.018.751.751 0 01-.018-1.042zm-4.69 9.64a1.998 1.998 0 002.83 0l1.25-1.25a.751.751 0 011.042.018.751.751 0 01.018 1.042l-1.25 1.25a3.5 3.5 0 11-4.95-4.95l2.5-2.5a3.5 3.5 0 014.95 0 .751.751 0 01-.018 1.042.751.751 0 01-1.042.018 1.998 1.998 0 00-2.83 0l-2.5 2.5a1.998 1.998 0 000 2.83z"
                    />
                  </svg>
                </button>
                <button
                  aria-label="Add a bulleted list <ctrl+shift+8>"
                  class="btn"
                >
                  <svg
                    aria-hidden="true"
                    class="octicon octicon-list-unordered"
                    fill="currentColor"
                    focusable="false"
                    height="16"
                    role="img"
                    style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      d="M5.75 2.5h8.5a.75.75 0 010 1.5h-8.5a.75.75 0 010-1.5zm0 5h8.5a.75.75 0 010 1.5h-8.5a.75.75 0 010-1.5zm0 5h8.5a.75.75 0 010 1.5h-8.5a.75.75 0 010-1.5zM2 14a1 1 0 110-2 1 1 0 010 2zm1-6a1 1 0 11-2 0 1 1 0 012 0zM2 4a1 1 0 110-2 1 1 0 010 2z"
                    />
                  </svg>
                </button>
                <button
                  aria-label="Add a numbered list <ctrl+shift+7>"
                  class="btn"
                >
                  <svg
                    aria-hidden="true"
                    class="octicon octicon-list-ordered"
                    fill="currentColor"
                    focusable="false"
                    height="16"
                    role="img"
                    style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      d="M5 3.25a.75.75 0 01.75-.75h8.5a.75.75 0 010 1.5h-8.5A.75.75 0 015 3.25zm0 5a.75.75 0 01.75-.75h8.5a.75.75 0 010 1.5h-8.5A.75.75 0 015 8.25zm0 5a.75.75 0 01.75-.75h8.5a.75.75 0 010 1.5h-8.5a.75.75 0 01-.75-.75zM.924 10.32a.5.5 0 01-.851-.525l.001-.001.001-.002.002-.004.007-.011c.097-.144.215-.273.348-.384.228-.19.588-.392 1.068-.392.468 0 .858.181 1.126.484.259.294.377.673.377 1.038 0 .987-.686 1.495-1.156 1.845l-.047.035c-.303.225-.522.4-.654.597h1.357a.5.5 0 010 1H.5a.5.5 0 01-.5-.5c0-1.005.692-1.52 1.167-1.875l.035-.025c.531-.396.8-.625.8-1.078a.57.57 0 00-.128-.376C1.806 10.068 1.695 10 1.5 10a.658.658 0 00-.429.163.835.835 0 00-.144.153zM2.003 2.5V6h.503a.5.5 0 010 1H.5a.5.5 0 010-1h.503V3.308l-.28.14a.5.5 0 01-.446-.895l1.003-.5a.5.5 0 01.723.447z"
                    />
                  </svg>
                </button>
              </div>
            </div>
            <textarea
              class="textarea"
              data-testid="textbox"
              placeholder="Type something..."
              style="height: 2px;"
            />
          </div>
        </div>
      </div>
      <div
        class="text-center align-self-start"
      >
        <button
          class="btn borderless btn-primary"
          style="color: rgb(255, 255, 255);"
        >
          Create New Challenge
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`FormCard Component Should render nothing if id is a title 1`] = `
<div>
  <div
    class="row"
  >
    <div
      class="py-4 px-3 card shadow-sm col-12 align-items-stretch"
    >
      <div
        class="p-0 card-body text-center align-self-start"
      />
      <div
        class="text-start"
      />
      <div
        class="text-center align-self-start"
      >
        <button
          class="btn borderless btn-primary"
          style="color: rgb(255, 255, 255);"
        >
          Create New Challenge
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`FormCard Component Should update testing onChange variable when person types 1`] = `
<div>
  <div
    class="row"
  >
    <div
      class="py-4 px-3 card shadow-sm col-12 align-items-stretch"
    >
      <div
        class="p-0 card-body text-center align-self-start"
      />
      <div
        class="text-start"
      >
        <div
          class="d-flex flex-column mb-4"
        >
          <span
            class="optionInfo__span"
            data-testid="spanfireStarter0"
          >
            Firestarter
          </span>
          <input
            class="form-control optionInfo__input"
            data-testid="input0"
            placeholder=""
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="text-center align-self-start"
      >
        <button
          class="btn borderless btn-primary"
          style="color: rgb(255, 255, 255);"
        >
          Create New Challenge
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`FormCard Component Should update testing onChange variable when person types MdInput 1`] = `
<div>
  <div
    class="row"
  >
    <div
      class="py-4 px-3 card shadow-sm col-12 align-items-stretch"
    >
      <div
        class="p-0 card-body text-center align-self-start"
      />
      <div
        class="text-start"
      >
        <div
          class="d-flex flex-column mb-4"
        >
          <span
            class="optionInfo__span"
            data-testid="spanfireStarter0"
          >
            Firestarter
          </span>
          <div
            style="background-color: white;"
          >
            <div
              class="nav nav-tabs"
            >
              <div
                class="nav-item"
              >
                <a
                  class="nav-link active"
                  data-rr-ui-event-key="Write"
                  href="#"
                  role="button"
                  style="color: rgb(41, 41, 41);"
                  tabindex="0"
                >
                  Write
                </a>
              </div>
              <div
                class="nav-item"
              >
                <a
                  class="nav-link"
                  data-rr-ui-event-key="Preview"
                  href="#"
                  role="button"
                  style="color: rgb(142, 142, 142);"
                  tabindex="0"
                >
                  Preview
                </a>
              </div>
              <div
                class="ms-auto btn-toolbar"
                role="toolbar"
              >
                <button
                  aria-label="Add header text"
                  class="btn"
                >
                  <svg
                    aria-hidden="true"
                    class="octicon octicon-heading"
                    fill="currentColor"
                    focusable="false"
                    height="16"
                    role="img"
                    style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      d="M3.75 2a.75.75 0 01.75.75V7h7V2.75a.75.75 0 011.5 0v10.5a.75.75 0 01-1.5 0V8.5h-7v4.75a.75.75 0 01-1.5 0V2.75A.75.75 0 013.75 2z"
                    />
                  </svg>
                </button>
                <button
                  aria-label="Add bold text <ctrl+b>"
                  class="btn"
                >
                  <svg
                    aria-hidden="true"
                    class="octicon octicon-bold"
                    fill="currentColor"
                    focusable="false"
                    height="16"
                    role="img"
                    style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      d="M4 2h4.5a3.501 3.501 0 012.852 5.53A3.499 3.499 0 019.5 14H4a1 1 0 01-1-1V3a1 1 0 011-1zm1 7v3h4.5a1.5 1.5 0 000-3zm3.5-2a1.5 1.5 0 000-3H5v3z"
                    />
                  </svg>
                </button>
                <button
                  aria-label="Add italic text <ctrl+i>"
                  class="btn"
                >
                  <svg
                    aria-hidden="true"
                    class="octicon octicon-italic"
                    fill="currentColor"
                    focusable="false"
                    height="16"
                    role="img"
                    style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      d="M6 2.75A.75.75 0 016.75 2h6.5a.75.75 0 010 1.5h-2.505l-3.858 9H9.25a.75.75 0 010 1.5h-6.5a.75.75 0 010-1.5h2.505l3.858-9H6.75A.75.75 0 016 2.75z"
                    />
                  </svg>
                </button>
                <button
                  aria-label="Insert a quote <ctrl+shift+.>"
                  class="btn"
                >
                  <svg
                    aria-hidden="true"
                    class="octicon octicon-quote"
                    fill="currentColor"
                    focusable="false"
                    height="16"
                    role="img"
                    style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      d="M1.75 2.5h10.5a.75.75 0 010 1.5H1.75a.75.75 0 010-1.5zm4 5h8.5a.75.75 0 010 1.5h-8.5a.75.75 0 010-1.5zm0 5h8.5a.75.75 0 010 1.5h-8.5a.75.75 0 010-1.5zM2.5 7.75v6a.75.75 0 01-1.5 0v-6a.75.75 0 011.5 0z"
                    />
                  </svg>
                </button>
                <button
                  aria-label="Insert code <ctrl+e>"
                  class="btn"
                >
                  <svg
                    aria-hidden="true"
                    class="octicon octicon-code"
                    fill="currentColor"
                    focusable="false"
                    height="16"
                    role="img"
                    style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      d="M11.28 3.22l4.25 4.25a.75.75 0 010 1.06l-4.25 4.25a.749.749 0 01-1.275-.326.749.749 0 01.215-.734L13.94 8l-3.72-3.72a.749.749 0 01.326-1.275.749.749 0 01.734.215zm-6.56 0a.751.751 0 011.042.018.751.751 0 01.018 1.042L2.06 8l3.72 3.72a.749.749 0 01-.326 1.275.749.749 0 01-.734-.215L.47 8.53a.75.75 0 010-1.06z"
                    />
                  </svg>
                </button>
                <button
                  aria-label="Add a link <ctrl+k>"
                  class="btn"
                >
                  <svg
                    aria-hidden="true"
                    class="octicon octicon-link"
                    fill="currentColor"
                    focusable="false"
                    height="16"
                    role="img"
                    style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      d="M7.775 3.275l1.25-1.25a3.5 3.5 0 114.95 4.95l-2.5 2.5a3.5 3.5 0 01-4.95 0 .751.751 0 01.018-1.042.751.751 0 011.042-.018 1.998 1.998 0 002.83 0l2.5-2.5a2.002 2.002 0 00-2.83-2.83l-1.25 1.25a.751.751 0 01-1.042-.018.751.751 0 01-.018-1.042zm-4.69 9.64a1.998 1.998 0 002.83 0l1.25-1.25a.751.751 0 011.042.018.751.751 0 01.018 1.042l-1.25 1.25a3.5 3.5 0 11-4.95-4.95l2.5-2.5a3.5 3.5 0 014.95 0 .751.751 0 01-.018 1.042.751.751 0 01-1.042.018 1.998 1.998 0 00-2.83 0l-2.5 2.5a1.998 1.998 0 000 2.83z"
                    />
                  </svg>
                </button>
                <button
                  aria-label="Add a bulleted list <ctrl+shift+8>"
                  class="btn"
                >
                  <svg
                    aria-hidden="true"
                    class="octicon octicon-list-unordered"
                    fill="currentColor"
                    focusable="false"
                    height="16"
                    role="img"
                    style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      d="M5.75 2.5h8.5a.75.75 0 010 1.5h-8.5a.75.75 0 010-1.5zm0 5h8.5a.75.75 0 010 1.5h-8.5a.75.75 0 010-1.5zm0 5h8.5a.75.75 0 010 1.5h-8.5a.75.75 0 010-1.5zM2 14a1 1 0 110-2 1 1 0 010 2zm1-6a1 1 0 11-2 0 1 1 0 012 0zM2 4a1 1 0 110-2 1 1 0 010 2z"
                    />
                  </svg>
                </button>
                <button
                  aria-label="Add a numbered list <ctrl+shift+7>"
                  class="btn"
                >
                  <svg
                    aria-hidden="true"
                    class="octicon octicon-list-ordered"
                    fill="currentColor"
                    focusable="false"
                    height="16"
                    role="img"
                    style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      d="M5 3.25a.75.75 0 01.75-.75h8.5a.75.75 0 010 1.5h-8.5A.75.75 0 015 3.25zm0 5a.75.75 0 01.75-.75h8.5a.75.75 0 010 1.5h-8.5A.75.75 0 015 8.25zm0 5a.75.75 0 01.75-.75h8.5a.75.75 0 010 1.5h-8.5a.75.75 0 01-.75-.75zM.924 10.32a.5.5 0 01-.851-.525l.001-.001.001-.002.002-.004.007-.011c.097-.144.215-.273.348-.384.228-.19.588-.392 1.068-.392.468 0 .858.181 1.126.484.259.294.377.673.377 1.038 0 .987-.686 1.495-1.156 1.845l-.047.035c-.303.225-.522.4-.654.597h1.357a.5.5 0 010 1H.5a.5.5 0 01-.5-.5c0-1.005.692-1.52 1.167-1.875l.035-.025c.531-.396.8-.625.8-1.078a.57.57 0 00-.128-.376C1.806 10.068 1.695 10 1.5 10a.658.658 0 00-.429.163.835.835 0 00-.144.153zM2.003 2.5V6h.503a.5.5 0 010 1H.5a.5.5 0 010-1h.503V3.308l-.28.14a.5.5 0 01-.446-.895l1.003-.5a.5.5 0 01.723.447z"
                    />
                  </svg>
                </button>
              </div>
            </div>
            <textarea
              class="textarea"
              data-testid="textbox"
              placeholder="Type something..."
              style="height: 2px;"
            />
          </div>
        </div>
      </div>
      <div
        class="text-center align-self-start"
      >
        <button
          class="btn borderless btn-primary"
          style="color: rgb(255, 255, 255);"
        >
          Create New Challenge
        </button>
      </div>
    </div>
  </div>
</div>
`;
